--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap");
+
 :root {
   --bg: #f9fbfa;
   --text: #0d1110;
@@ -10,6 +12,12 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+}
+
+h1 {
+  font-weight: 700;
 }
 
 body {
